# PocketAERO

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  adsb_ffi.cpp  audio_output.h  dect_ffi.cpp  pager_hackrf.c  rfstudio_sdr.c  scm_lib.c  signal_gen.c  wideband_monitor.h
android/app/src/main/cpp/jaero_dsp/: aerol.cpp  aerol.h  jaero_demod.cpp  jaero_demod.h  mskdemodulator.h  oqpskdemodulator.cpp  oqpskdemodulator.h
android/app/src/main/cpp/libacars/libacars/: configuration.c  version.c
android/app/src/main/cpp/librtlsdr/include/: rtl-sdr-android.h
android/app/src/main/kotlin/dev/sarahsforge/paero/: MainActivity.kt
android/app/src/main/res/xml/: usb_device_filter.xml
lib/: main.dart
lib/models/: app_theme.dart  rf_mode.dart  sdr_type.dart  sweep_settings.dart  waterfall_settings.dart
lib/providers/: aero_provider.dart  radio_provider.dart
lib/screens/: modes_screen.dart
lib/services/: adsb_service.dart  aero_service.dart  dart_fft.dart  dect_service.dart  rtl433_service.dart  scm_service.dart  sdr_backend.dart  sdr_ffi.dart  sdr_service.dart  version_check.dart
lib/tabs/: acars_tab.dart  aircraft_tab.dart  cchannel_tab.dart  settings_tab.dart  sus_tab.dart  waterfall_tab.dart
lib/utils/: responsive.dart
lib/widgets/: acars_panel.dart  constellation_view.dart  frequency_display.dart  mode_selector.dart  panoramic_spectrum.dart  radio_controls.dart
